deleted unnecessary if, realtime-radiobutton changes

--- a/html/index.html
+++ b/html/index.html
@@ -17,9 +17,9 @@
     <input type="text" id="search">
     <button id="searchButton">Search</button>
     <br>
-    <input type="radio" name="radioButton" id="radio-choice-1" value="flex" checked/>
+    <input type="radio" name="radioButton" class="radio" id="radio-choice-1" value="flex" checked/>
     <label for="flex">Flex</label>
-    <input type="radio" name="radioButton" id="radio-choice-2" value="float"  />
+    <input type="radio" name="radioButton" class="radio" id="radio-choice-2" value="float"  />
     <label for="float">Float</label>
 
         <div class="container-fluid">
